# exercism

./: .gitignore  README.md
python/hamming/: hamming.py
python/hamming/.exercism/: metadata.json
python/hello-world/.exercism/: metadata.json
python/high-scores/: high_scores.py  v1_high_scores.py
python/high-scores/.exercism/: metadata.json
python/isogram/: isogram.py
python/isogram/.exercism/: metadata.json
python/matrix/: matrix.py
python/matrix/.exercism/: metadata.json
python/raindrops/: raindrops.py
python/raindrops/.exercism/: metadata.json
python/scrabble-score/: scrabble_score.py
python/twelve-days/: twelve_days.py  twelve_days_modified.py
python/twelve-days/.exercism/: metadata.json
python/two-fer/: two_fer.py
python/two-fer/.exercism/: metadata.json
python/word-count/: word_count.py
python/word-count/rust/: Cargo.toml  __init__.py
python/word-count/rust/src/: lib.rs
