[package]
name = "rustpylib"
version = "0.1.0"
authors = ["shirouto <28932673+shirouto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustpylib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.4.1"
features = ["extension-module"]
